--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.115.5"
 uvicorn = "^0.32.0"
 pydantic = "^2.9.2"
 sqlalchemy-orm = "^1.2.10"
+sqlmodel = "^0.0.22"
 
 
 [build-system]
