--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ pydantic_core==2.23.4
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 sqlalchemy-orm==1.2.10
+sqlmodel==0.0.22
 starlette==0.41.2
 typing-inspect==0.9.0
 typing_extensions==4.12.2
